<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<!--    <PreferenceCategory
        android:title="@string/pref_sync_title"
        android:key="pref_sync">-->
        <EditTextPreference
            android:key="preferences_server"
            android:title="@string/preferences_server"
            android:summary="@string/preferences_server_summary"
            android:defaultValue="@string/preferences_server_default" />

        <EditTextPreference
            android:key="preferences_name"
            android:title="@string/preferences_name"
            android:summary="@string/preferences_name_summary"
            android:defaultValue="@string/preferences_name_default" />
    <!--</PreferenceCategory>-->
</PreferenceScreen>